# data-rag

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  dependencies.py  main.py
app/chat/: conversation.py  router.py  schemas.py  service.py
app/core/: exceptions.py  logging.py  middleware.py
app/datasets/: repository.py  router.py  schemas.py  service.py
app/db/: duckdb.py  metadata.py
app/llm/: anthropic.py  base.py  factory.py  openai.py
app/query/: prompt_builder.py  router.py  schemas.py  service.py
app/templates/: admin.html  chat.html
prompts/: chart_generation.md  interpretation.md  interpretation_chat.md  sql_generation.md  sql_generation_multi.md
tests/: conftest.py  test_chat.py  test_datasets.py  test_db.py  test_llm.py  test_query.py
tests/fixtures/: inventory.csv  sales_messy.csv  sales_simple.csv
