[project]
name = "data-rag"
version = "0.1.0"
description = "Natural language queries over structured CSV data using Text-to-SQL with DuckDB"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
